added operations endpoints